fix: center-align text of middle footer items

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,7 @@ footer {
 }
 
 .footer-item {
+    flex: 1;
     display: flex;
     flex-direction: row;
     gap: .5rem;
@@ -26,6 +27,10 @@ footer {
 
 .footer-item:not(:last-child) {
     flex-grow: 1;
+}
+
+.footer-item:not(:first-child), .footer-item:not(:last-child) {
+    text-align: center;
 }
 
 .footer-item:last-child {
